Chart/commons-cli-normal/tests%20250617002527/compiler_output/CompilerOutput-TextStyle_5_1Test.java.txt
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/TextStyle_5_1Test.java:16: error: cannot find symbol
        builder.alignment(TextStyle.Alignment.CENTER)
               ^
  symbol:   method alignment(Alignment)
  location: variable builder of type Builder
/home/usc/ChatUniTest-python/Chart/commons-cli-normal/tests%20250617002527/test_cases/TextStyle_5_1Test.java:23: error: cannot find symbol
        TextStyle textStyle = builder.build();
                                     ^
  symbol:   method build()
  location: variable builder of type Builder
2 errors
